# shell

./: README.md
assets/: emoji.json
components/: StyledText.qml
components/controls/: IconTextButton.qml  StyledSlider.qml  TextButton.qml  ToggleButton.qml  VUMeter.qml
config/: Config.qml  LauncherConfig.qml  ServiceConfig.qml  UtilitiesConfig.qml
modules/bar/popouts/: Audio.qml
modules/controlcenter/audio/: AudioPane.qml
modules/launcher/: ContentList.qml  EmojiGrid.qml
modules/launcher/items/: ClipboardItem.qml  EmojiGridItem.qml  EmojiItem.qml
modules/launcher/services/: Clipboard.qml  Emoji.qml
modules/osd/: Content.qml  Wrapper.qml
modules/utilities/: Wrapper.qml
modules/utilities/cards/: Record.qml
services/: Audio.qml  Recorder.qml
welcome/: CMakeLists.txt  Colours.qml  README.md  main.cpp  main.qml  qmldir
